# glados-tts.cpp

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  glados-tts.cpp
